# cmsc858d-hw1

./: 1000.random.dna.txt  1000.substr.dna.txt  10000.random.dna.txt  10000.substr.dna.txt  100000.random.dna.txt  100000.substr.dna.txt  <output_file>  CMakeLists.txt  README.md  assignment1  assignment1.cpp  build_in.txt  build_out.txt  bwocc.cpp  bws.cpp  bwt.cpp  newrank  newrank.cpp  newrank.h  rank.cpp  x.py  y.py
assignment1.dSYM/Contents/Resources/DWARF/: assignment1
bwt.dSYM/Contents/: Info.plist
bwt.dSYM/Contents/Resources/DWARF/: bwt
newrank.dSYM/Contents/: Info.plist
newrank.dSYM/Contents/Resources/DWARF/: newrank
